# ============================================
# SciTeX: Python Framework for Scientific Research
# https://scitex.ai
# ============================================

# /home/ywatanabe/proj/scitex-code/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex"
version = "2.13.0"
description = "A comprehensive Python library for scientific computing and data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" }
]
keywords = [
    "scientific-computing",
    "data-analysis",
    "machine-learning",
    "signal-processing",
    "neural-networks",
    "research"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ============================================
# Core Dependencies (Minimal - Always Installed)
# ============================================
# Philosophy: Keep core minimal. Users install what they need with:
#   pip install scitex[modulename]
#   pip install scitex[audio,scholar]  # multiple modules
#   pip install scitex[all]            # everything
dependencies = [
    # Essential Scientific Computing
    "numpy",
    "pandas",
    # Essential Utilities
    "PyYAML",
    "tqdm",
    "packaging",
    "natsort",  # Natural sorting - used by many modules
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-code"
Documentation = "https://scitex.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-code"
"Bug Tracker" = "https://github.com/ywatanabe1989/scitex-code/issues"

[project.scripts]
scitex = "scitex.__main__:main"
# MCP Server entry points (individual modules)
scitex-audio = "scitex.audio.mcp_server:main"
scitex-canvas = "scitex.canvas.mcp_server:main"
scitex-capture = "scitex.capture.mcp_server:main"
scitex-diagram = "scitex.diagram.mcp_server:main"
scitex-plt = "scitex.plt.mcp_server:main"
scitex-scholar = "scitex.scholar.mcp_server:main"
scitex-stats = "scitex.stats.mcp_server:main"
scitex-template = "scitex.template.mcp_server:main"
# Unified MCP Server (all modules in one)
scitex-mcp-server = "scitex.mcp_server:main"

# ============================================
# Optional Dependencies - Module-Oriented
# ============================================
# Install specific modules: pip install scitex[audio]
# Install multiple: pip install scitex[audio,scholar,stats]
# Install all: pip install scitex[all]

[project.optional-dependencies]

# --------------------------------------------
# Module-Specific Dependencies
# Each module can be installed independently
# --------------------------------------------

# AI Module - LLM APIs and ML tools
# Use: pip install scitex[ai]
ai = [
    "openai",
    "anthropic",
    "google-genai",
    "groq",
    "scikit-learn",
    "joblib",
    "seaborn",
    "scipy",
    "matplotlib",
    "natsort",
    "pillow",
    "pyyaml",
    "requests",
    "ruamel.yaml",
    "xarray",
    "umap-learn",
    "sktime",
    "markdown2",
    "imbalanced-learn",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "optuna",
    # "psutil",
    # "torch",
    # "pytorch_pretrained_vit",
    # "torchvision",
]

# Audio Module - Text-to-Speech
# Use: pip install scitex[audio]
audio = [
    "pyttsx3",
    "gTTS",
    "pydub",
    "elevenlabs",
    "mcp",
    "pytest-asyncio",
]

# Benchmark Module - Performance monitoring
# Use: pip install scitex[benchmark]
benchmark = [
    "psutil",
]

# Bridge Module - External system integration
# Use: pip install scitex[bridge]
bridge = [
    "matplotlib",
    "scipy",
]

# Browser Module - Web automation
# Use: pip install scitex[browser]
browser = [
    "playwright>=1.40.0",
    "aiohttp",
    "matplotlib",
]

# Capture Module - Screenshot capture
# Use: pip install scitex[capture]
capture = [
    "mss",
    "Pillow",
    "playwright>=1.40.0",
    "mcp",
]

# CLI Module - Command line interface
# Use: pip install scitex[cli]
cli = [
    "click",
    "requests",
    "playwright",
    "pyyaml",
    "aiohttp",
    "beautifulsoup4",
    "GitPython",
]

# Cloud Module - Cloud service integration
# Use: pip install scitex[cloud]
cloud = [
    "matplotlib",
]

# Config Module - Configuration management
# Use: pip install scitex[config]
config = [
    "PyYAML",
]

# DB Module - Database operations
# Use: pip install scitex[db]
db = [
    "sqlalchemy",
    "psycopg2-binary",
]

# Decorators Module - Caching and utilities
# Use: pip install scitex[decorators]
decorators = [
    "joblib",
    "tqdm",
    "xarray",
    "pytest-asyncio",
    "matplotlib",
    "scipy",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",
]

# Diagram Module - Diagram generation
# Use: pip install scitex[diagram]
diagram = [
    "PyYAML",
]

# DSP Module - Digital Signal Processing
# Use: pip install scitex[dsp]
dsp = [
    "scipy",
    "sounddevice",
    "matplotlib",
    "joblib",
    "tensorpac",
    "ruamel.yaml",
    "h5py",
    "readchar",
    "xarray",
    "seaborn",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "mne",
    # "torch",
    # "ripple_detection",
    # "torchsummary",
    # "julius",
    # "torchaudio",
]

# DevTools Module - scitex.dev code analysis and development tools
# Use: pip install scitex[devtools]
# Note: Named "devtools" to avoid conflict with "dev" (testing deps)
devtools = [
    "matplotlib",
    "joblib",
    "ruamel.yaml",
    "xarray",
    "seaborn",
    "scipy",
]

# DT Module - Date/time utilities
# Use: pip install scitex[dt]
dt = [
    "matplotlib",
]

# Gen Module - General utilities
# Use: pip install scitex[gen]
gen = [
    "ipython",
    "h5py",
    "pyperclip",
    "readchar",
    "scipy",
    "matplotlib",
    "xarray",
    "requests",
    "joblib",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",
]

# Git Module - Git operations
# Use: pip install scitex[git]
git = [
    "GitPython",
    "matplotlib",
]

# IO Module - File I/O operations
# Use: pip install scitex[io]
io = [
    "h5py",
    "openpyxl",
    "xlrd",
    "ruamel.yaml",
    "lxml",
    "lxml_html_clean",
    "xarray",
    "zarr",
    "numcodecs",
    "Pillow",
    "piexif",
    "pypdf",
    "qrcode[pil]",
    "PyPDF2",
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "html2text",
    "markdown",
    "joblib",
    "plotly",
    "pymatreader",
    "natsort",
    "GitPython",
    "scipy",
    "matplotlib",
    "pyarrow",
    "pyyaml",
    "tqdm",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "mne",
    # "optuna",
    # "catboost",
    # "psutil",
    # "torch",
]

# Linalg Module - Linear algebra
# Use: pip install scitex[linalg]
linalg = [
    "scipy",
    "sympy",
    "geom_median",
    "matplotlib",
    "joblib",
    "xarray",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",
]

# Logging Module - Enhanced logging
# Use: pip install scitex[logging]
logging = [
    "matplotlib",
]

# MSWord Module - MS Word document handling
# Use: pip install scitex[msword]
msword = [
    "python-docx",
    "pypandoc",
]

# NN Module - Neural Networks
# Use: pip install scitex[nn]
nn = [
    "seaborn",
    "ipdb",
    "matplotlib",
    "joblib",
    "tensorpac",
    "ruamel.yaml",
    "h5py",
    "readchar",
    "xarray",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",
    # "torchaudio",
    # "torchsummary",
    # "julius",
    # "mne",
    # "ripple_detection",
]

# Parallel Module - Parallel processing
# Use: pip install scitex[parallel]
parallel = [
    "tqdm",
]

# Path Module - Path utilities
# Use: pip install scitex[path]
path = [
    "GitPython",
    "matplotlib",
]

# Pd Module - Pandas utilities
# Use: pip install scitex[pd]
pd = [
    "xarray",
]

# PLT Module - Plotting utilities
# Use: pip install scitex[plt]
plt = [
    "matplotlib",
    "seaborn",
    "Pillow",
    "piexif",
    "termplotlib",
    "scipy",
    "xarray",
    "pyyaml",
    "joblib",
    "ruamel.yaml",
]

# Repro Module - Reproducibility tools
# Use: pip install scitex[repro]
repro = [
    "matplotlib",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",    
    # "jax",
    # "tensorflow",
]

# Resource Module - Resource monitoring
# Use: pip install scitex[resource]
resource = [
    "psutil",
    "matplotlib",
    "pyyaml",
    "joblib",
    "ruamel.yaml",
    "h5py",
    "scipy",
    "readchar",
    # # Heavy dependencies handled by _AVAILABLE flags    
    # "torch",    
]

# Scholar Module - Paper management & browser
# Use: pip install scitex[scholar]
scholar = [
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    "html2text",
    "crawl4ai",
    "scholarly",
    "pymed",
    "python-docx",
    "PyPDF2",
    "pdfplumber",
    "PyMuPDF",
    "pytesseract",
    "bibtexparser",
    "playwright>=1.40.0",
    "feedparser",
    "httpx",
    "tenacity",
    "pydantic",
    "watchdog",
    "natsort",
    "aiohttp",
    "openpyxl",
    "sqlalchemy",
    "nest-asyncio",
    "seaborn",
    "scikit-learn",
    "Pillow",
    "requests",
    "matplotlib",
    "pyyaml",
    "tqdm",
    "sql-manager",
    "ruamel.yaml",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",    
]

# Session Module - Session management
# Use: pip install scitex[session]
session = [
    "matplotlib",
    "PyYAML",
]

# Sh Module - Shell utilities
# Use: pip install scitex[sh]
sh = [
    "matplotlib",
]

# Stats Module - Statistical analysis
# Use: pip install scitex[stats]
stats = [
    "scipy",
    "statsmodels",
    "matplotlib",
    "tabulate",
    # # Heavy dependencies handled by _AVAILABLE flags
    # "torch",    
]

# Str Module - String utilities
# Use: pip install scitex[str]
str = [
    "natsort",
    "matplotlib",
    "xarray",
]

# Tex Module - LaTeX utilities
# Use: pip install scitex[tex]
tex = [
    "matplotlib",
]

# Torch Module - PyTorch support
# Use: pip install scitex[torch]
torch = [
    "torch",
]

# Types Module - Type utilities
# Use: pip install scitex[types]
types = [
    "xarray",
    # # Heavy dependencies handled by _AVAILABLE flags    
    # "torch",    
]

# Utils Module - General utilities
# Use: pip install scitex[utils]
utils = [
    "h5py",
    "natsort",
    "matplotlib",
    "xarray",
    "tqdm",
]

# Web Module - Web utilities
# Use: pip install scitex[web]
web = [
    "aiohttp",
    "beautifulsoup4",
    "readability-lxml",
    "requests",
    "Pillow",
    "matplotlib",
    "tqdm",
    "joblib",
    "scikit-learn",
    "pytest-asyncio",
    "ruamel.yaml",
    "xarray",
    "seaborn",
    "scipy",
    "markdown2",
    "anthropic",
    "openai",
    "google-genai",
    "groq",
    # # Heavy dependencies handled by _AVAILABLE flags        
    # "torch",    
    # "umap-learn",    
]

# Writer Module - Academic paper writing
# Use: pip install scitex[writer]
writer = [
    "yq",
    "xlsx2csv",
    "csv2latex",
    "matplotlib",
    "GitPython",
    "pytest-asyncio",
]

# --------------------------------------------
# Heavy Dependencies (Optional)
# --------------------------------------------
# Use: pip install scitex[heavy]
# Or combine: pip install scitex[io,heavy]
heavy = [
    # PyTorch ecosystem
    "torch",
    "torchvision",
    "torchaudio",
    "torchsummary",
    "julius",
    "pytorch_pretrained_vit",
    # Neuroscience
    "mne",
    "ripple_detection",
    # ML/Optimization
    "optuna",
    "catboost",
    # Other ML frameworks
    "jax",
    "tensorflow",
    # Visualization
    "umap-learn",
    # System
    "psutil",
]

# --------------------------------------------
# Development Tools
# --------------------------------------------

# Development Tools
# Use: pip install scitex[dev]
dev = [
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-mock",
    "pytest-env",
    "pytest-asyncio",
    "pytest-testmon",
    "pytest-json-report",
    # Code Quality
    "ruff",
    "mypy",
    "pre-commit",
    "pyright",
    "python-lsp-server",
    "jedi",
    "rope",
    # Profiling
    "line-profiler",
    "memory-profiler",
    # Documentation
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "markdown",
    "markdown2",
    "pygments",
    # Build
    "build",
    "twine",
    "wheel",
    "setuptools",
    # Type Hints
    "types-requests",
    "types-PyYAML",
    "types-setuptools",
    # Maintenance scripts
    "stdlib-list",
    "tomlkit",
    "matplotlib",
    "pyyaml",
]

# All features (everything except dev)
# Use: pip install scitex[all]
all = [
    # science
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scikit-learn",
    "statsmodels",
    "h5py",
    "xarray",
    "Pillow",
    # io
    "openpyxl",
    "xlrd",
    "ruamel.yaml",
    "lxml",
    "lxml_html_clean",
    "zarr",
    "numcodecs",
    "piexif",
    "pypdf",
    "qrcode[pil]",
    "PyPDF2",
    "PyMuPDF",
    "pdfplumber",
    "python-docx",
    "html2text",
    "markdown",
    "joblib",
    "pymatreader",
    "natsort",
    "GitPython",
    # ai
    "openai",
    "anthropic",
    "google-genai",
    "groq",
    "optuna",
    # audio
    "pyttsx3",
    "gTTS",
    "pydub",
    "elevenlabs",
    "mcp",
    # browser/capture
    "playwright>=1.40.0",
    "aiohttp",
    "mss",
    # cli
    "click",
    "requests",
    # db
    "sqlalchemy",
    "psycopg2-binary",
    # dsp
    "sounddevice",
    # gen
    "ipython",
    "pyperclip",
    "readchar",
    # linalg
    "sympy",
    "geom_median",
    # msword
    "pypandoc",
    # nn/dl
    "torch",
    "torchvision",
    "torchaudio",
    "torchsummary",
    "julius",
    "transformers",
    "accelerate",
    "bitsandbytes",
    "fairscale",
    "pytorch_pretrained_vit",
    "pytorch-optimizer",
    "einops",
    # plt
    "termplotlib",
    # resource
    "psutil",
    # scholar
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    "crawl4ai",
    "scholarly",
    "pymed",
    "pytesseract",
    "bibtexparser",
    "feedparser",
    "httpx",
    "tenacity",
    "pydantic",
    "watchdog",
    "nest-asyncio",
    # web
    "readability-lxml",
    # writer
    "yq",
    "xlsx2csv",
    "csv2latex",
    # ml
    "scikit-image",
    "imbalanced-learn",
    "umap-learn>=0.5.4",
    "llvmlite>=0.39.0",  # Force Python 3.11+ compatible version
    "sktime",
    "catboost",
    "opencv-python",
    # neuro
    "mne",
    "obspy",
    "pyedflib",
    "pybids",
    "tensorpac",
    "ripple_detection",
    # figures
    "figrecipe",
    # jupyter
    "jupyterlab",
    "jupyter-collaboration",
    "ipykernel",
    "ipdb",
    "papermill",
    "jupytext",
    "nbsphinx",
    # webdev
    "fastapi",
    "flask",
    "streamlit",
    "celery",
    # gui
    "dearpygui",
    "PyQt6",
]

# ============================================
# Tool Configurations
# ============================================

[tool.hatch.version]
path = "src/scitex/__version__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "src/scitex/scholar/crossref_local",
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = ".pytest_cache"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "-p", "no:warnings",
    "--ignore=tests/custom/old/",
    "--import-mode=importlib",
    "--timeout=60",
]
timeout_method = "signal"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmark tests",
    "filterwarnings: marks tests to filter specific warnings",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
source = ["src/scitex"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.old/*",
    "*/migrations/*",
    "*/conftest.py",
    "*/setup.py",
    "*/__main__.py",
    "*/versioneer.py",
    "*/_version.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if __name__ == .__main__.",
    "pass",
    "except ImportError:",
    "except ModuleNotFoundError:",
    "warnings.warn",
    "logger.debug",
    "logger.info",
]

[tool.coverage.paths]
source = [
    "src/scitex",
    "*/site-packages/scitex",
]

[tool.coverage.html]
directory = "htmlcov"
title = "SciTeX Coverage Report"
skip_covered = false
skip_empty = true

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["scitex"]
known_third_party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/.old/*", "*/migrations/*", "*/__pycache__/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E266", "E501", "W503", "E731", "E402"]
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".tox",
    ".coverage",
    ".coveragerc",
    "htmlcov",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",
]
per-file-ignores = [
    "__init__.py:F401,F403",
    "tests/*:F401,F403,F811",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

# ============================================
# Ruff Configuration
# ============================================

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".old*",
    "migrations",
    "htmlcov",
    "docs/to_claude",
    "src/scitex/scholar/docs",
    "examples/*/docs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E203",   # whitespace before ':'
    "E266",   # too many leading '#' for block comment
    "E501",   # line too long (handled by formatter)
    "E731",   # do not assign a lambda expression
    "E402",   # module level import not at top of file
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F403", "F811"]

[tool.ruff.lint.isort]
known-first-party = ["scitex"]
known-third-party = ["numpy", "pandas", "matplotlib", "scipy", "sklearn", "torch", "pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
