[metadata]
name = scitex
version = 2.0.0
author = Yusuke Watanabe
author_email = ywatanabe@alumni.u-tokyo.ac.jp
description = A comprehensive Python library for scientific computing and data analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ywatanabe1989/scitex
project_urls =
    Bug Tracker = https://github.com/ywatanabe1989/scitex/issues
    Documentation = https://scitex.readthedocs.io
    Source Code = https://github.com/ywatanabe1989/scitex
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    pandas>=1.1.0
    matplotlib>=3.3.0
    scipy>=1.5.0
    scikit-learn>=0.23.0
    torch>=1.7.0
    tqdm>=4.50.0
    pyyaml>=5.3.0
    joblib>=0.16.0
    h5py>=2.10.0
    Pillow>=8.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.10
    pytest-xdist>=2.0
    pytest-timeout>=1.4
    pytest-mock>=3.3
    coverage[toml]>=5.0
    black>=21.0
    isort>=5.0
    flake8>=3.8
    mypy>=0.900
    pre-commit>=2.15
    tox>=3.20
    sphinx>=4.0
    sphinx-rtd-theme>=1.0
    nbsphinx>=0.8
all =
    seaborn>=0.11
    plotly>=5.0
    networkx>=2.5
    xarray>=0.16
    dask>=2021.0
    numba>=0.53
    opencv-python>=4.5
    sqlalchemy>=1.4
    psycopg2-binary>=2.9
    requests>=2.25
    beautifulsoup4>=4.9
    lxml>=4.6
    openpyxl>=3.0
    xlrd>=2.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=2.0.0
    myst-parser>=2.0.0
    sphinx-autodoc-typehints>=1.25.0
    sphinx-copybutton>=0.5.2
    sphinx-autobuild>=2024.4.16
    sphinxcontrib-napoleon>=0.7
    sphinxcontrib-bibtex>=2.6.0
    sphinx-autoapi>=3.0.0
    nbsphinx>=0.9.0
    ipykernel>=6.25.0

[options.entry_points]
console_scripts =
    scitex = scitex.__main__:main

[tool:pytest]
minversion = 6.0
addopts = 
    -ra
    --strict-markers
    --doctest-modules
    --cov=scitex
    --cov-branch
    --cov-report=term-missing:skip-covered
    --cov-fail-under=85
    --tb=short
    --maxfail=1
    -n auto
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    benchmark: marks tests as benchmark tests
    gpu: marks tests that require GPU
    network: marks tests that require network access
    plotting: marks tests that generate plots
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore::ResourceWarning
    ignore:.*unclosed.*:ResourceWarning
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL

[coverage:run]
source = src/scitex
branch = True
parallel = True
omit =
    */tests/*
    */__pycache__/*
    */.old/*
    */migrations/*
    */conftest.py
    */setup.py
    */__main__.py
    */versioneer.py
    */_version.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
sort = Cover
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    if TYPE_CHECKING:
    if typing.TYPE_CHECKING:
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if __name__ == "__main__":
    pass
    except ImportError:
    except ModuleNotFoundError:
    warnings.warn
    logger.debug
    logger.info

[coverage:paths]
source =
    src/scitex
    */site-packages/scitex

[coverage:html]
directory = htmlcov
title = SciTeX Coverage Report
skip_covered = False
skip_empty = True

[coverage:xml]
output = coverage.xml

[isort]
profile = black
line_length = 88
known_first_party = scitex
known_third_party = numpy,pandas,matplotlib,scipy,sklearn,torch,pytest
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_glob = */.old/*,*/migrations/*,*/__pycache__/*

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503, E731, E402
max-complexity = 10
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .eggs,
    *.egg,
    .tox,
    .coverage,
    .coveragerc,
    htmlcov,
    .pytest_cache,
    .mypy_cache,
    migrations
per-file-ignores =
    __init__.py:F401,F403
    tests/*:F401,F403,F811

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
ignore_missing_imports = True
implicit_reexport = True
namespace_packages = True
show_error_codes = True
show_column_numbers = True
pretty = True

[mypy-tests.*]
ignore_errors = True

[mypy-setup]
ignore_errors = True

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html