[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-base"
version = "0.1.0"
description = "Base classes for SciTeX MCP servers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]