[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-orchestrator"
version = "0.1.0"
description = "MCP server for SciTeX project orchestration and management"
requires-python = ">= 3.8"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
scitex-orchestrator = "scitex_orchestrator.server:main"