[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-pd"
version = "0.1.0"
description = "MCP server for SciTeX pandas DataFrame operations"
requires-python = ">= 3.8"
dependencies = [
    "mcp>=0.9.0",
    "pandas>=1.3.0",
]

[project.scripts]
scitex-pd = "scitex_pd.server:main"