[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-project-validator"
version = "1.0.0"
description = "MCP server for validating SciTeX project structures"
authors = [
    {name = "ywatanabe", email = "ywatanabe@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["scitex", "mcp", "validation", "project-structure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/SciTeX-Code"
Repository = "https://github.com/ywatanabe1989/SciTeX-Code/tree/main/mcp_servers/scitex-project-validator"
Documentation = "https://github.com/ywatanabe1989/SciTeX-Code/blob/main/mcp_servers/scitex-project-validator/README.md"

[project.scripts]
scitex-validate = "scitex_project_validator.validator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scitex_project_validator*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"