[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-validator"
version = "0.1.0"
description = "MCP server for comprehensive SciTeX compliance validation"
requires-python = ">= 3.8"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
scitex-validator = "scitex_validator.server:main"