[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-analyzer-mcp"
version = "0.1.0"
description = "MCP server for SciTeX code analysis and understanding"
requires-python = ">= 3.8"
dependencies = [
    "mcp",
    "scitex",
    "pyyaml",
]

[project.scripts]
scitex-analyzer = "scitex_analyzer.server:main"