[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-config"
version = "0.1.0"
description = "MCP server for SciTeX configuration management"
requires-python = ">= 3.8"
dependencies = [
    "mcp>=0.9.0",
    "pyyaml>=6.0",
]

[project.scripts]
scitex-config = "scitex_config.server:main"