[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-io-mcp"
version = "0.1.0"
description = "MCP server for SciTeX IO module - unified file loading/saving with format detection"
readme = "README.md"
license = "MIT"
authors = [
    { name = "ywatanabe", email = "ywatanabe@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
scitex-io-mcp = "server:main"