[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-plt-mcp"
version = "0.1.0"
description = "MCP server for SciTeX PLT module translations"
requires-python = ">= 3.8"
dependencies = [
    "mcp",
    "scitex",
]

[project.scripts]
scitex-plt = "scitex_plt.server:main"
