[project]
name = "scitex-scholar-mcp"
version = "0.1.0"
description = "MCP server for SciTeX Scholar - Scientific literature management"
authors = [
    {name = "ywatanabe", email = "ywata1989@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.7.0",
    "scitex>=0.1.0",
    "aiofiles>=22.1.0",
    "bibtexparser>=1.4.0",
    "crawl4ai[all]>=0.3.0",
    "nest-asyncio>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scitex-scholar-mcp = "server:main"