[project]
name = "scitex-unified-translator"
version = "0.1.0"
description = "Unified MCP server for intelligent SciTeX code translation"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "mcp>=0.1.0",
    "ast",
    "logging",
    "pathlib",
    "typing",
    "dataclasses",
]

[project.scripts]
scitex-unified-translator = "scitex_translators.server:main"

[tool.setuptools]
packages = ["scitex_translators"]

[mcp]
name = "scitex-unified-translator"
description = "Unified translator for SciTeX modules with context-aware intelligence"
tools = [
    "translate_to_scitex",
    "translate_from_scitex",
    "analyze_code",
    "validate_code",
    "list_modules",
    "get_module_info",
    "batch_translate"
]